--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Map</title>
+    <link rel="icon" href="./favicon-32x32.png" type="image/x-icon">
+    <title>D&D club "Bright Side"</title>
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <section>
-        <h1>це ваша карта</h1>
+        <h1>печера кам'яних пащ</h1>
         <div class="div"></div>
     </section>
 </body>
