--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section>
-        <h1>печера кам'яних пащ</h1>
+        <h1>печера зеленої карги</h1>
         <div class="div"></div>
     </section>
 </body>
